--- a/FrontEndProjectWeb2/src/app/components/admin-stations/admin-stations.component.html
+++ b/FrontEndProjectWeb2/src/app/components/admin-stations/admin-stations.component.html
@@ -1,71 +1,102 @@
 <table>
   <tr>
     <td>
-<p>
-  <!-- Kreiramo mapu -->
-  <agm-map [latitude]="45.242268" [longitude]="19.842954" [zoom]="18" (mapClick)="placeMarker($event)">  
+      <p>
+        <!-- Kreiramo mapu -->
+        <agm-map
+          [latitude]="45.242268"
+          [longitude]="19.842954"
+          [zoom]="18"
+          (mapClick)="placeMarker($event)"
+        >
+          <agm-marker
+            *ngFor="let station of stations"
+            [latitude]="station.Latitude"
+            [longitude]="station.Longitude"
+            [iconUrl]="imageUrl"
+          >
+            <agm-info-window
+              [latitude]="station.Latitude"
+              [longitude]="station.Longitude"
+            >
+              <span> Ime: {{ station.Name }} </span>
+              <br />
+              <span> Adresa: {{ station.Address }} </span>
+              <br />
+              <span>
+                Linije:
+                <ng-container *ngFor="let linesStation of station.Lines">
+                  {{ linesStation.Number }}
+                </ng-container>
+              </span>
+            </agm-info-window>
+          </agm-marker>
 
-    <agm-marker *ngFor="let station of stations" [latitude]="station.Latitude" [longitude]="station.Longitude" [iconUrl]="imageUrl">
-      
-      <agm-info-window [latitude]="station.Latitude" [longitude]="station.Longitude">
-        <span>
-          Ime: {{station.Name}}
-        </span>
-        <br/>
-        <span>
-          Adresa: {{station.Address}}
-        </span>
-        <br/>
-        <span>
-          Linije:
-          <ng-container *ngFor="let linesStation of station.Lines">
-          {{linesStation.Number}}
-          </ng-container>
-        </span>
-      </agm-info-window>
+          <!--*ngFor="let point of polyline.path"-->
+          <agm-marker
+            *ngIf="newStationGL != undefined"
+            [latitude]="newStationGL.latitude"
+            [longitude]="newStationGL.longitude"
+            [iconUrl]="imageUrl"
+          >
+          </agm-marker>
+        </agm-map>
+      </p>
+    </td>
+    <td>
+      <h3>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dodaj novu stanicu
+      </h3>
+      <form [formGroup]="addStationForm" (ngSubmit)="addStation()">
+        <table>
+          <tr>
+            <td>
+              &nbsp;&nbsp;Ime
+            </td>
+            <td>
+              <input
+                type="text"
+                formControlName="name"
+                required
+                class="form-control"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Adresa
+            </td>
+            <td>
+              <input
+                type="text"
+                formControlName="address"
+                required
+                class="form-control"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+          </tr>
+        </table>
 
-    </agm-marker>
-
-    <!--*ngFor="let point of polyline.path"-->
-    <agm-marker *ngIf="newStationGL!=undefined" [latitude]="newStationGL.latitude" [longitude]="newStationGL.longitude" [iconUrl]="imageUrl">
-    </agm-marker>
-
-  </agm-map>
-</p>
-</td>
-<td>
-  <h2>Dodaj novu stanicu</h2>
-  <form [formGroup]="addStationForm" (ngSubmit)="addStation()">
-  <table>
-    <tr>
-        <td>
-      Ime
-      </td>
-      <td>
-        <input type="text" formControlName="name"
-        required
-        class="form-control"/>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Adresa
-      </td>
-      <td>
-        <input type="text" formControlName="address"
-        required
-        class="form-control"/>
-      </td>
-    </tr>
-    <tr>
-      <td>
-          <button type="submit" [disabled]="!addStationForm.valid">Dodaj</button>
-      </td>
-    </tr>
-</table>
-<button (click)="changeStation()">Izmeni</button>
-<button (click)="deleteStation()">Obrisi</button>
-</form>
-</td>
-</tr>
+        &nbsp;
+        <button
+          type="submit"
+          [disabled]="!addStationForm.valid"
+          class="btn btn-secondary"
+        >
+          Dodaj
+        </button>
+        &nbsp;
+        <button (click)="changeStation()" class="btn btn-secondary">
+          Izmeni
+        </button>
+        &nbsp;
+        <button (click)="deleteStation()" class="btn btn-secondary">
+          Obrisi
+        </button>
+      </form>
+    </td>
+  </tr>
 </table>
