--- a/FrontEndProjectWeb2/src/app/components/schedule/schedule.component.css
+++ b/FrontEndProjectWeb2/src/app/components/schedule/schedule.component.css
@@ -1,8 +1,29 @@
-.sirina{
-    width: 200px
+.sirina {
+  width: 200px;
 }
 
-.btn-black{
-    background-color: #000 !important;
-    color: #fff;
+.btn-black {
+  background-color: #000 !important;
+  color: #fff;
+}
+
+#mydiv {
+  position: fixed;
+  top: 30%;
+  left: 50%;
+  width: 30em;
+  height: 18em;
+  margin-top: -9em; /*set to a negative number 1/2 of your height*/
+  margin-left: -15em; /*set to a negative number 1/2 of your width*/
+  border: 1px solid #ccc;
+  background-color: #f3f3f3;
+}
+#mydiv2 {
+  position: fixed;
+  top: 70%;
+  left: 35%;
+  width: 60em;
+  height: 6em;
+  margin-top: -9em; /*set to a negative number 1/2 of your height*/
+  margin-left: -15em; /*set to a negative number 1/2 of your width*/
 }
