--- a/FrontEndProjectWeb2/src/app/components/lines/lines.component.html
+++ b/FrontEndProjectWeb2/src/app/components/lines/lines.component.html
@@ -57,6 +57,36 @@
               </select>
             </td>
           </tr>
+            <tr>
+                <td>
+                    Ime linije:
+              </td>
+              <td>
+                <input type="text" [(ngModel)]="lineName"
+                readonly
+                class="form-control"/>
+            </td>
+          </tr>
+          <tr>
+              <td>
+                  Broj linije:
+            </td>
+            <td>
+              <input type="number" [(ngModel)]="lineNum"
+              readonly
+              class="form-control"/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+              Tip linije:
+        </td>
+        <td>
+          <input type="text" [(ngModel)]="lineType"
+          readonly
+          class="form-control"/>
+      </td>
+    </tr>
         </tbody>
       </table>
       <div *ngIf="role === 'Admin'">
