Added profile for passenger

--- a/FrontEndProjectWeb2/src/app/components/authorized-user-header/authorized-user-header.component.html
+++ b/FrontEndProjectWeb2/src/app/components/authorized-user-header/authorized-user-header.component.html
@@ -2,7 +2,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-            <button class="nav-link" class="btn btn-secondary">Profil <span class="sr-only">(current)</span></button>
+            <button class="nav-link" class="btn btn-secondary" (click)="profile()">Profil <span class="sr-only">(current)</span></button>
         </li>
         &nbsp;
          <li class="nav-item active">
