--- a/FrontEndProjectWeb2/src/app/components/employee-profile/employee-profile.component.html
+++ b/FrontEndProjectWeb2/src/app/components/employee-profile/employee-profile.component.html
@@ -1,3 +1,81 @@
-<p>
-  employee-profile works!
-</p>
+<div class="main">
+  <div class="col-md-8 col-sm-10">
+    <div class="profile-form">
+      <form [formGroup]="profileForm" (ngSubmit)="change()">
+        <div class="form-group row">
+          <label class="col-sm-4 col-form-label">E-mail adresa</label>
+          <div class="col-sm-6">
+            <div class="md-form mt-0">
+              <input
+                type="email"
+                formControlName="Email"
+                required
+                class="form-control"
+                placeholder="E-mail adresa"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 col-form-label">Ime</label>
+          <div class="col-sm-6">
+            <div class="md-form mt-0">
+              <input
+                type="text"
+                formControlName="FirstName"
+                required
+                class="form-control"
+                placeholder="Ime"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 col-form-label">Prezime</label>
+          <div class="col-sm-6">
+            <div class="md-form mt-0">
+              <input
+                type="text"
+                formControlName="LastName"
+                required
+                class="form-control"
+                placeholder="Prezime"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 col-form-label">Datum rodjenja</label>
+          <div class="col-sm-6">
+            <div class="md-form mt-0">
+              <input
+                type="text"
+                formControlName="BirthDate"
+                required
+                class="form-control"
+                placeholder="Datum rodjenja"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 col-form-label">Adresa</label>
+          <div class="col-sm-6">
+            <div class="md-form mt-0">
+              <input
+                type="text"
+                formControlName="Address"
+                required
+                class="form-control"
+                placeholder="Adresa"
+              />
+            </div>
+          </div>
+        </div>
+        <button type="submit" [disabled]="!registerForm.valid" class="btn btn-black">
+          Izmeni
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
