--- a/FrontEndProjectWeb2/src/app/components/controlor-nav-bar/controlor-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/controlor-nav-bar/controlor-nav-bar.component.html
@@ -7,6 +7,11 @@
         class="list-group-item list-group-item-action bg-light"
         (click)="ticketValidation()"
         >Vazenje karte</a>
+        <a
+        class="list-group-item list-group-item-action bg-light"
+      
+        >Zahtevi za validaciju</a
+        >
     </div>
   </div>
   
