--- a/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
@@ -26,5 +26,10 @@
       (click)="controllor()"
       >Dodaj kontrolora</a
     >
+    <a
+      class="list-group-item list-group-item-action bg-light"
+      
+      >Zahtevi za validaciju</a
+    >
   </div>
 </div>
