--- a/FrontEndProjectWeb2/src/app/components/ticket-history/ticket-history.component.html
+++ b/FrontEndProjectWeb2/src/app/components/ticket-history/ticket-history.component.html
@@ -1,7 +1,7 @@
 <h3>Istorija vasih karti!</h3>
 Klikom na neku kartu, dobicete informacije o ceni karte!
 <div *ngIf="selectedTicketId!==undefined&&selectedTicketId!==null">
-  <h3 class="color">Cena karte ID: {{selectedTicketId}}, je {{ticketPrice}}</h3>
+  <h3 class="color">Cena karte ID: {{selectedTicketId}}, je {{ticketPrice}} dinara.</h3>
 </div>
 <ul>
     <br/>
